<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/text_data_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/idNationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/id_nation"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/idNationTxt" />

    <TextView
        android:id="@+id/idNation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/id_nation"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/nation"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idNationTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/nationTxt" />

    <TextView
        android:id="@+id/nation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/nation"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/idNation" />

    <TextView
        android:id="@+id/idYearTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/id_year"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nationTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/idYearTxt" />

    <TextView
        android:id="@+id/idYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/id_year"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/nation" />

    <TextView
        android:id="@+id/yearTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/year"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idYearTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/yearTxt" />

    <TextView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/year"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/idYear" />

    <TextView
        android:id="@+id/populationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/population"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yearTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/populationTxt" />

    <TextView
        android:id="@+id/population"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/population"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/slugNationTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/slug_nation"
        android:textColor="@color/text_heading_color"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/populationTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_divider"
        android:textColor="@color/text_heading_color"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toTopOf="@id/slugNationTxt" />

    <TextView
        android:id="@+id/slugNation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/slug_nation"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline50"
        app:layout_constraintTop_toBottomOf="@id/population" />

</androidx.constraintlayout.widget.ConstraintLayout>